utils-core/main/default/objects/Datatable_Lookup_Config__mdt/Datatable_Lookup_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configures what data shows up while using the customLookup data type inline editing.</description>
    <label>Datatable Lookup Config</label>
    <pluralLabel>Datatable Lookup Config</pluralLabel>
</CustomObject>