utils-core/main/default/objects/Datatable_Lookup_Config__mdt/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <defaultValue>&apos;standard:empty&apos;</defaultValue>
    <description>Unfortunately, getting the actual object icon is resource intensive. So then, these are configured here instead.</description>
    <inlineHelpText>The Lightning Design System name of the icon, such as standard:account, custom:custom6 etc.</inlineHelpText>
    <label>Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>