utils-core/main/default/objects/Datatable_Lookup_Config__mdt/fields/Subtitle_Field__c.field-meta.xml
<CustomField>
    <fullName>Subtitle_Field__c</fullName>
    <inlineHelpText>Provides more context to the Title field, usually a field that gives more detailed information about the record being selected.</inlineHelpText>
    <label>Subtitle Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>