utils-core/main/default/objects/Datatable_Lookup_Config__mdt/fields/Title_Field__c.field-meta.xml
<CustomField>
    <fullName>Title_Field__c</fullName>
    <inlineHelpText>Usually the Name field. This is the field that displays as the primary &quot;Title&quot; of each item in the search box.</inlineHelpText>
    <label>Title Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>