utils-core/main/default/objects/Datatable_Lookup_Config__mdt/listViews/All_Configs.listView-meta.xml
<ListView>
    <fullName>All_Configs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Datatable_Config__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Title_Field__c</columns>
    <columns>Subtitle_Field__c</columns>
    <columns>Icon_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Configs</label>
</ListView>